--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,3 @@
-<%--
-  Created by IntelliJ IDEA.
-  User: Administrator
-  Date: 2017/4/18
-  Time: 9:20
-  To change this template use File | Settings | File Templates.
---%>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,36 +8,36 @@
     <title>学生信息管理系统</title>
 </head>
 <body>
-<form name="form1" method="post" action="bottom.jsp">
-    <div class="banner">
-        <div class="head">
+<form name="form1" method="post" action="../jsp/login_check.jsp">
+    <div class="banner banner_1">
+        <div class="head head_1">
             <h1>
                 学生信息管理系统
             </h1>
         </div>
-        <div class="body">
+        <div class="body body_1">
             <div class="p">
                 <p>
                     username:&nbsp;&nbsp;
-                    <input name="username" type="text" id="username_1" value="">
-                    <a href="*">注册账号</a>
+                    <input name="username" type="text" id="username" value="">
+                    <a href="../html/register.html">注册账号</a>
                 </p>
             </div>
             <div class="p">
                 <p>
                     password:&nbsp;&nbsp;
-                    <input name="password" type="password" id="password_1" value="">
+                    <input name="password" type="password" id="password" value="">
                     <a href="*">找回密码</a>
                 </p>
             </div>
             <div class="checkbox">
                 <p>
-                    <input name="Remember password" type="checkbox" id="Remember password">记住密码&nbsp;
-                    <input name="automatic logon" type="checkbox" id="automatic logon">自动登录
+                    <input name="Remember_password" type="checkbox" id="Remember_password">记住密码&nbsp;
+                    <input name="automatic_logon" type="checkbox" id="automatic_logon">自动登录
                 </p>
             </div>
             <div class="logon">
-                <input class="submit"  id="Submit" name="Submit" type="submit" value="登陆">
+                <input class="submit submit_1"  id="Submit" name="Submit" type="submit" value="登陆">
             </div>
         </div>
     </div>
